# proto_faker

./: Cargo.toml  Readme.md  build.rs  flake.nix
.github/workflows/: cd.yml
proto/: person.proto
src/: distribution.rs  main.rs  option_parser.rs  proto_faker.rs  proto_loader.rs
