[package]
name = "proto_fake"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.12"
prost-types = "0.12"
prost-reflect = "0.12"
fake = { version = "2.9", features = ["derive"] }
rand = "0.8"
chrono = "0.4"
bytes = "1.0"
anyhow = "1.0"
tempfile = "3.8"
protoc-bin-vendored = "3.0"
clap = { version = "4.4", features = ["derive"] }
