[package]
name = "proto-faker"
version = "0.1.1"
edition = "2024"

[dependencies]
prost = "0.13"
prost-types = "0.13"
prost-reflect = "0.15"
fake = { version = "4.3", features = ["derive", "uuid"] }
rand = "0.9"
chrono = "0.4"
bytes = "1.0"
anyhow = "1.0"
tempfile = "3.8"
protoc-bin-vendored = "3.0"
clap = { version = "4.4", features = ["derive"] }
uuid = { version = "1.7.0", features = ["v4"] }
winnow = "0.7.7"
rdkafka = { version = "0.37", features = ["ssl", "cmake-build"] }
schema_registry_converter = { version = "4.0", features = ["proto_raw"] }
tokio = { version = "1.35", features = ["full"] }
futures = "0.3.31"
rand_distr = "0.5.1"
tar = "0.4"
zstd = "0.13"
